== 0.3.x 2009-??-??

* Major enhancements:
  * Place *.reek files in source folder to configure smell detection behaviour
* Minor enhancements:
  * Smells in singleton methods are now analysed
  * Uncommunicative parameter names in blocks now reported
  * Modules and blocks now reflected in scope of smell reports
* Fixes:
  * Corrected false reports of long arg lists to yield
  * A method can now be a UtilityFunction only when it includes a call

== 0.3.1 2008-11-17

* Minor enhancements:
  * Uncommunicative Name now checks instance variables more thoroughly
  * Uncommunicative Name now warns about names of the form 'x2'
  * Added check for duplicated calls within a method
  * Reduced scope of Feature Envy warnings to cover only overuse of lvars
  * Added rdoc comments explaining what each smell is about
  * Chained iterators are no longer mis-reported as nested

== 0.3.0 2008-11-02

* Minor enhancements:
  * New smell: first naive checks for Control Couple
  * reek now only checks sources passed on the command line
  * Code snippets can be supplied on the commandline
  * Added headings and warnings count when smells in multiple files
  * Added Reek::RakeTask to run reek from rakefiles
* Tweaks:
  * Fixed: Returns exit status 2 when smells are reported
  * Fixed: no longer claims an empty method is a Utility Function

== 0.2.3 2008-09-22

* Minor enhancements:
  * Only reports Feature Envy when the method isn't a Utility Function
  * General improvements to assessing Feature Envy
* Tweaks:
  * Fixed: coping with parameterless yield call
  * Fixed: copes with :self as an expression
  * Fixed: displaying the receiver of many more kinds of Feature Envy
  * Fixed: Large Class calculation for Object

== 0.2.2 2008-09-15

* Tweaks:
  * Fixed --version!

== 0.2.1 2008-09-14

* Tweaks:
  * Now works from the source code, instead of requiring each named file
  * Added integration tests that run reek on a couple of gems

== 0.2.0 2008-09-10

* Minor enhancements: