@@ -37,6 +37,7 @@ lib/reek/yield_call_context.rb
 setup.rb
 spec/integration/integration_spec.rb
 spec/integration/reek_source_spec.rb
+spec/integration/script_spec.rb
 spec/reek/class_context_spec.rb
 spec/reek/code_checks.rb
 spec/reek/code_context_spec.rb
@@ -46,7 +47,6 @@ spec/reek/module_context_spec.rb
 spec/reek/object_refs_spec.rb
 spec/reek/options_spec.rb
 spec/reek/report_spec.rb
-spec/reek/script_spec.rb
 spec/reek/sexp_formatter_spec.rb
 spec/reek/singleton_method_context_spec.rb
 spec/reek/smells/control_couple_spec.rb
