@@ -4,8 +4,8 @@
 #  Copyright (c) 2008 Kevin Rutherford, Rutherford Software Ltd. All rights reserved.
 #
 
-require File.join(File.dirname(__FILE__), '../lib/', 'reek')
-require File.join(File.dirname(__FILE__), '../lib/', 'reek/options')
+require 'reek'
+require 'reek/options'
 
 sources = Reek::Options.parse(ARGV)
 exitstatus = 0
