@@ -3,26 +3,7 @@ $:.unshift File.dirname(__FILE__)
 require 'set'
 
 module Reek
-
-  class SortByContext
-    def self.compare(smell1, smell2)
-      smell1.detailed_report <=> smell2.detailed_report
-    end
-  end
-
-  class SortBySmell
-    def self.compare(smell1, smell2)
-      smell1.report <=> smell2.report
-    end
-  end
-
   class Report
-
-    SORT_ORDERS = {
-      :context => SortByContext,
-      :smell => SortBySmell
-    }
-
     def initialize  # :nodoc:
       @report = SortedSet.new
     end
